# pytorch-superpoint

./: .gitignore  README.md  Train_model_frontend.py  Train_model_heatmap.py  Val_model_heatmap.py  bag2npy.py  evaluation.py  event_simulator.py  export.py  img2bag.sh  repack.py  repack_sanity_check.py  settings.py  train.py
configs/: magicpoint_shapes_pair.yaml
datasets/: Coco.py  SyntheticDataset_gaussian.py  event_simulator.py  synthetic_dataset.py
generate_data/: bag2img.py  event_simulator.py  generate.sh  repack_pts.py  synthetic_dataset.py
generate_data/bag2events/: CMakeLists.txt  bag2events.cpp  package.xml
models/: SuperPointNet_gauss2.py
utils/: loader.py  photometric.py  utils.py
